# khuneo-astgen

./: CMakeLists.txt
include/kh-astgen/: ast.h  lexer.h  parser.h
kh-astgen/: lexer.c  lexer.h
src/: ast.c  lexer.c  parser.c
